fixed: moving string invisibility time shorter

--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -1,9 +1,9 @@
 @keyframes move {
   from {
-    transform: translate(100vw);
+    transform: translate(90vw);
   }
   to {
-    transform: translate(-100vw);
+    transform: translate(-100%);
   }
 }
 
@@ -163,6 +163,8 @@
 /* Название текщей песни */
 
 .player__song-info {
+  width: auto;
+  display: inline-block;
   white-space: nowrap;
   margin: 0;
 }
